[package]
name = "webformd_macros"
version = "0.1.2"
edition = "2024"
license = "CC0-1.0"
description = "macro for webformd to deserialize actix_web::web::Form for structs with Option<Vec<String>> from a checkbox or similar"
authors = ["Roberto Rodriguez"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
